[package]
name = "anychain-ethereum"
description = "A Rust library for Ethereum-focused cryptocurrency wallets, enabling seamless transactions on the Ethereum blockchain"
version = "0.1.7"
keywords = ["blockchain", "crypto", "cryptocurrency", "ethereum", "wallet"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anychain-core = { path = "../anychain-core", default-features = false, version = "0.1.3"}
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }
ethereum-types = { workspace = true }

[features]
default = ["std"]
std = ["anychain-core/std"]
